Started work on 2015.13

--- a/c/2015/CMakeLists.txt
+++ b/c/2015/CMakeLists.txt
@@ -55,9 +55,12 @@ target_sources(grid PRIVATE ${PROJECT_SOURCE_DIR}/src/grid.c)
 add_aoc_library(hamiltonian_path)
 target_sources(hamiltonian_path PRIVATE ${PROJECT_SOURCE_DIR}/src/hamiltonian_path.c)
 
+add_aoc_library(generics4c)
+target_sources(generics4c PRIVATE ${PROJECT_SOURCE_DIR}/src/generics4c.c)
+
 add_aoc_library(json4c)
-target_sources(json4c PRIVATE src/json4c.c src/generics4c.c)
-target_link_libraries(json4c hashtable string4c)
+target_sources(json4c PRIVATE src/json4c.c)
+target_link_libraries(json4c generics4c hashtable string4c)
 
 add_subdirectory(tests)
 add_subdirectory(day1)
@@ -72,3 +75,4 @@ add_subdirectory(day9)
 add_subdirectory(day10)
 add_subdirectory(day11)
 add_subdirectory(day12)
+add_subdirectory(day13)
