--- a/c/2015/day11/CMakeLists.txt
+++ b/c/2015/day11/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(day11)
 target_sources(day11 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/day11.c)
 target_include_directories(day11 PRIVATE ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(day11 PRIVATE aoc test4c)
+target_link_libraries(day11 PRIVATE aoc string4c test4c)
