--- a/c/2015/CMakeLists.txt
+++ b/c/2015/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.29)
 project(AdventOfCode2015)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_C_STANDARD 99) # This project uses C99.
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror")
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
