The major refactoring continues.

--- a/c/2015/CMakeLists.txt
+++ b/c/2015/CMakeLists.txt
@@ -10,6 +10,41 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
 set(CMAKE_BUILD_TYPE Debug)
 
+function(add_aoc_day DAY LIBS)
+    if (DAY LESS 1 OR DAY GREATER 25)
+        message(FATAL_ERROR "The DAY argument (${DAY}) must be between 1 and 25.")
+    endif()
+
+    set(TARGET_NAME "day${DAY}")
+
+    add_executable(${TARGET_NAME})
+    target_sources(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src/days/${TARGET_NAME}.c)
+    target_include_directories(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
+    target_link_libraries(${TARGET_NAME} PRIVATE aoc)
+
+    if (LIBS)
+        target_link_libraries(${TARGET_NAME} PRIVATE ${LIBS})
+    endif()
+endfunction()
+
+function(add_aoc_test TEST_NAME LIBS)
+    if (NOT TEST_NAME)
+        message(FATAL_ERROR "The TEST_NAME argument is required.")
+    endif()
+
+    SET(TARGET_NAME "test_${TEST_NAME}")
+
+    add_executable(${TARGET_NAME})
+    target_sources(${TARGET_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/tests/${TARGET_NAME}.c)
+    target_include_directories(${TARGET_NAME} PRIVATE include)
+
+    if (LIBS)
+        target_link_libraries(${TARGET_NAME} ${LIBS})
+    endif()
+
+    add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
+endfunction()
+
 function(add_aoc_library lib_name)
     add_library(${lib_name})
     target_include_directories(${lib_name} PRIVATE include)
@@ -28,9 +63,9 @@ target_sources(array4c PRIVATE ${PROJECT_SOURCE_DIR}/src/array4c.c)
 add_aoc_library(conway)
 target_sources(conway PRIVATE ${PROJECT_SOURCE_DIR}/src/conway.c)
 
-add_library(generics)
-target_sources(generics PRIVATE ${PROJECT_SOURCE_DIR}/src/generics/array.c ${PROJECT_SOURCE_DIR}/src/generics/object.c ${PROJECT_SOURCE_DIR}/src/generics/value.c)
-target_include_directories(generics PRIVATE include)
+# add_library(generics)
+# target_sources(generics PRIVATE ${PROJECT_SOURCE_DIR}/src/generics/array.c ${PROJECT_SOURCE_DIR}/src/generics/object.c ${PROJECT_SOURCE_DIR}/src/generics/value.c)
+# target_include_directories(generics PRIVATE include)
 
 add_aoc_library(grid)
 target_sources(grid PRIVATE ${PROJECT_SOURCE_DIR}/src/grid.c)
@@ -46,7 +81,7 @@ target_sources(hashtable PRIVATE ${PROJECT_SOURCE_DIR}/src/fnv.c ${PROJECT_SOURC
 
 add_aoc_library(json)
 target_sources(json PRIVATE ${PROJECT_SOURCE_DIR}/src/json/lexer.c ${PROJECT_SOURCE_DIR}/src/json/parser.c ${PROJECT_SOURCE_DIR}/src/json/token.c)
-target_link_libraries(json generics string4c)
+target_link_libraries(json string4c)
 
 add_aoc_library(math4c)
 target_sources(math4c PRIVATE ${PROJECT_SOURCE_DIR}/src/math4c.c)
@@ -64,72 +99,37 @@ target_sources(maritims_md5 PRIVATE ${PROJECT_SOURCE_DIR}/src/maritims_md5.c)
 add_aoc_library(point)
 target_sources(point PRIVATE ${PROJECT_SOURCE_DIR}/src/point.c)
 
+# Days
+add_aoc_day(1 "")
+add_aoc_day(2 "math4c")
+add_aoc_day(3 "hashtable")
+add_aoc_day(4 "m;maritims_md5")
+add_aoc_day(5 "hashtable")
+add_aoc_day(6 "point")
+add_aoc_day(7 "hashtable")
+add_aoc_day(8 "")
+add_aoc_day(9 "hamiltonian")
+add_aoc_day(10 "")
+add_aoc_day(11 "test4c")
+add_aoc_day(12 "json")
+add_aoc_day(13 "math4c")
+add_aoc_day(14 "")
+add_aoc_day(15 "math4c")
+add_aoc_day(16 "")
+add_aoc_day(17 "math4c")
+add_aoc_day(18 "conway;grid")
+# add_aoc_day(19 "")
+
 # Enable testing
-add_executable(test_array4c tests/test_array4c.c src/array4c.c)
-target_include_directories(test_array4c PRIVATE include)
-
-add_executable(test_grammar tests/test_grammar.c src/grammar/grammar.c src/grammar/rule.c)
-target_include_directories(test_grammar PRIVATE include)
-target_link_libraries(test_grammar hashset hashtable string4c)
-
-add_executable(test_grid tests/test_grid.c src/grid.c)
-target_include_directories(test_grid PRIVATE include)
-
-add_executable(test_hashset tests/test_hashset.c src/fnv.c src/hashset.c)
-target_include_directories(test_hashset PRIVATE include)
-
-add_executable(test_hashtable tests/test_hashtable.c src/fnv.c src/hashtable.c)
-target_include_directories(test_hashtable PRIVATE include)
-target_link_libraries(test_hashtable string4c)
-
-add_executable(test_json tests/test_json.c)
-target_include_directories(test_json PRIVATE include)
-target_link_libraries(test_json json generics)
-
-add_executable(test_maritims_md5 tests/test_maritims_md5.c src/maritims_md5.c)
-target_include_directories(test_maritims_md5 PRIVATE include)
-target_link_libraries(test_maritims_md5 m)
-
-add_executable(test_math4c tests/test_math4c.c src/array4c.c src/math4c.c)
-target_include_directories(test_math4c PRIVATE include)
-target_link_libraries(test_math4c gmp m)
-
-add_executable(test_point tests/test_point.c src/point.c)
-target_include_directories(test_point PRIVATE include)
-
-add_executable(test_string4c tests/test_string4c.c src/string4c.c)
-target_include_directories(test_string4c PRIVATE include)
+add_aoc_test(array4c "array4c")
+# add_aoc_test(grammar "")
+add_aoc_test(grid "grid")
+add_aoc_test(hashset "hashset")
+add_aoc_test(hashtable "hashtable;string4c")
+add_aoc_test(json "json")
+add_aoc_test(maritims_md5 "m;maritims_md5")
+add_aoc_test(math4c "math4c")
+add_aoc_test(point "point")
+add_aoc_test(string4c "string4c")
 
 enable_testing()
-
-# Add test cases
-# add_test(NAME Array4CTest COMMAND test_array4c)
-add_test(NAME GrammarTest COMMAND test_grammar)
-add_test(NAME GridTest COMMAND test_grid)
-add_test(NAME HashSetTest COMMAND test_hashset)
-add_test(NAME HashTableTest COMMAND test_hashtable)
-add_test(NAME JsonTest COMMAND test_json)
-add_test(NAME MaritimsMD5Test COMMAND test_maritims_md5)
-add_test(NAME Math4CTest COMMAND test_math4c)
-add_test(NAME PointTest COMMAND test_point)
-add_test(NAME String4CTest COMMAND test_string4c)
-
-add_subdirectory(day1)
-add_subdirectory(day2)
-add_subdirectory(day3)
-add_subdirectory(day4)
-add_subdirectory(day5)
-add_subdirectory(day6)
-add_subdirectory(day7)
-add_subdirectory(day8)
-add_subdirectory(day9)
-add_subdirectory(day10)
-add_subdirectory(day11)
-add_subdirectory(day12)
-add_subdirectory(day13)
-add_subdirectory(day14)
-add_subdirectory(day15)
-add_subdirectory(day16)
-add_subdirectory(day17)
-add_subdirectory(day18)
-add_subdirectory(day19)
